packages/components/src/components/post-header/post-header.scss
@use '@swisspost/design-system-styles/variables/commons';
@use '@swisspost/design-system-styles/variables/animation';
@use '@swisspost/design-system-styles/variables/elevation';
@use './custom-properties';

*,
::before,
::after {
  box-sizing: border-box;
}

:host {
  display: block;
  position: sticky;
  inset-block-start: 0;
  z-index: commons.$zindex-header;
}

.global-header,
.local-header {
  position: absolute;
  inset-inline: 0;
  transition: inset-block-start animation.$transition-time-simple animation.$transition-easing-default;
}

.global-header,
.sliding-controls,
.local-header,
.navigation {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: var(--post-header-gap);

  .spacer {
    flex-grow: 1;
  }
}

.global-header,
.local-header,
.burger-menu {
  box-shadow: elevation.$elevation-300;
}

.global-header {
  z-index: 1; // local header should slide bellow the global header
  inset-block-start: var(--post-global-header-top);
  background-color: #ffcc00;
  height: var(--post-global-header-expanded-height);
  padding-inline-start: var(--post-global-header-padding-inline-start);
  padding-inline-end: var(--post-global-header-padding-inline-end);

  > .sliding-controls {
    flex-grow: 1;
    position: relative;
    inset-block-start: var(--post-global-controls-top);
  }

  &:has(~ .local-header:not(.no-title.no-navigation)),
  &:has(~ .burger-menu.extended) {
    box-shadow: none;
  }

  .logo {
    align-self: flex-end;
    width: var(--post-global-header-expanded-height);
    height: var(--post-logo-height);
    min-height: var(--post-global-header-reduced-height);
    max-height: 100%;
    margin-inline-end: 1.25rem;
  }
}

.local-header {
  inset-block-start: var(--post-local-header-top);
  flex-wrap: wrap;
  background-color: #fff;
  min-height: var(--post-local-header-expanded-min-height);
  padding-inline-start: var(--post-local-header-padding-inline-start);
  padding-inline-end: var(--post-local-header-padding-inline-end);
  padding-block: var(--post-local-header-padding-block);

  // having both title AND navigation
  &:not(.no-title, .no-navigation) {
    padding-block-start: 1.125rem;
  }

  // missing both title AND navigation
  &.no-title.no-navigation {
    display: none;
  }

  .navigation {
    flex: 1 0 100%;
    height: var(--post-main-navigation-height);
    margin-inline-start: calc(-1 * var(--post-local-header-padding-inline-start));
    max-width: 100vw;
  }

  &.no-navigation .navigation {
    display: none;
  }

  &.no-navigation-controls .navigation {
    margin-inline-end: calc(-1 * var(--post-local-header-padding-inline-end));
  }

  &:has(.navigation.megadropdown-open),
  &:has(~ .burger-menu.extended) {
    box-shadow: none;

    &::after {
      content: '';
      display: block;
      position: absolute;
      inset-inline: 0;
      inset-block-end: 0;
      height: 1px;
      background-color: #e1e0dc;
    }
  }
}

.burger-menu {
  z-index: -1; // burger-menu should slide bellow the local header
  position: absolute;
  inset-inline: 0;
  inset-block-start: var(--post-header-height);
  height: calc(
    min(var(--post-header-scroll-parent-height, 100dvh), 100dvh) - var(--post-header-height)
  );
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  background-color: #fafafa;

  &:not(.extended) {
    display: none;
  }

  .burger-menu-body,
  .burger-menu-footer {
    display: flex;
    flex-direction: column;
    padding-inline: var(--post-burger-menu-padding-inline);
  }

  .burger-menu-body {
    flex-grow: 1;
    padding-block: 1.5rem;
    gap: var(--post-burger-menu-body-gap);
  }

  .burger-menu-footer {
    background-color: #f0efed;
    padding-block: 1rem 1.5rem;
    gap: var(--post-burger-menu-footer-gap);
  }

  .navigation-controls {
    height: 3.5rem;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    padding-inline: 0.25rem;
  }

  &.no-navigation-controls .navigation-controls {
    display: none;
  }
}

